tạo nốt giao diện

--- a/mock/html/MH03.html
+++ b/mock/html/MH03.html
@@ -3,7 +3,7 @@
 	<meta charset="UTF-8"/>
 	<title> MH03 - View</title>
 	<link rel="stylesheet" type="text/css" href="../css/style.css"/>
-	<script language="javascript" src="javascript.js"> </script>
+	<script language="javascript" src="../javascript.js"> </script>
 </head>
 <body>
 <form action="" method="get" class="formMH3">
