--- a/mock/html/MH01.html
+++ b/mock/html/MH01.html
@@ -3,7 +3,7 @@
 	<meta charset="UTF-8">
 	<title> MH01 - Login </title>
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
-	<script language="javascript" src="javascript.js"> </script>
+	<script language="javascript" src="../javascript.js"> </script>
 </head>
 <body>
 <form action="MH02.html" method="post">
