--- a/mock/html/MH01.html
+++ b/mock/html/MH01.html
@@ -24,7 +24,7 @@
 				Tên đăng nhập
 			</td>
 			<td style="padding-left:20%">
-				<input type="textbox" value="" width="20px">
+				<input type="text" value="" width="20px"/>
 			</td>
 		</tr>
 		<tr>
@@ -32,7 +32,7 @@
 				Mật khẩu
 			</td>
 			<td style="padding-left:20%">
-				<input type="password" value="" width="20px">
+				<input type="password" value="" width="20px"/>
 			</td>
 		</tr>
 		<tr>
